--- a/Series.ipynb
+++ b/Series.ipynb
@@ -3,7 +3,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Pandas Series \n",
+    "## It's like a python list (1-d datastructure) but more powerful "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import all the necessary libraries"
+   ]
   },
   {
    "cell_type": "code",
@@ -17,6 +27,20 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Different types of data in a series \n",
+    "dtype: object = string  \n",
+    "       int64 = int  \n",
+    "       bool = boolean....  \n",
+    "       \n",
+    "Series() is a constructor method which takes a list as input and returns a series as output\n",
+    "       \n",
+    " "
    ]
   },
   {
@@ -151,6 +175,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using attributes for series "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
@@ -169,7 +200,7 @@
     }
    ],
    "source": [
-    "s.values"
+    "s.values #returns an array "
    ]
   },
   {
@@ -213,8 +244,235 @@
     }
    ],
    "source": [
-    "s.dtype"
+    "s.dtype # 'o' means a string "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using methods for series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "prices = [33, 32, 67, 23, 52]\n",
+    "s = pd.Series(prices)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "207"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84619392"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.product()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41.4"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parameters and Arguments  \n",
+    "Passing parameters to the series function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sunday        Apple\n",
+       "Monday       Orange\n",
+       "Tuesday      Grapes\n",
+       "Wednesday    Banana\n",
+       "Friday        Mango\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = [\"Apple\", \"Orange\", \"Grapes\", \"Banana\", \"Mango\"]\n",
+    "weekdays = [\"Sunday\", \"Monday\", \"Tuesday\", \"Wednesday\", \"Friday\"]\n",
+    "pd.Series(fruits, weekdays) #data = fruits, index = weekdays (implicit declaration)\n",
+    "pd.Series(data = fruits, index = weekdays) #explicit declaration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### Index names can be non-unique but both the lists should have same number of elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sunday        Apple\n",
+       "Monday       Orange\n",
+       "Tuesday      Grapes\n",
+       "Wednesday    Banana\n",
+       "Friday        Mango\n",
+       "Monday         plum\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = [\"Apple\", \"Orange\", \"Grapes\", \"Banana\", \"Mango\", \"plum\"]\n",
+    "weekdays = [\"Sunday\", \"Monday\", \"Tuesday\", \"Wednesday\", \"Friday\",\"Monday\"] #monday is repeated\n",
+    "pd.Series(fruits, weekdays)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Import series with read_csv function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pd.read_csv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
