added gitignore file

--- a/Series.ipynb
+++ b/Series.ipynb
@@ -420,13 +420,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Bulbasaur\n",
+       "1         Ivysaur\n",
+       "2        Venusaur\n",
+       "3      Charmander\n",
+       "4      Charmeleon\n",
+       "5       Charizard\n",
+       "6        Squirtle\n",
+       "7       Wartortle\n",
+       "8       Blastoise\n",
+       "9        Caterpie\n",
+       "10        Metapod\n",
+       "11     Butterfree\n",
+       "12         Weedle\n",
+       "13         Kakuna\n",
+       "14       Beedrill\n",
+       "15         Pidgey\n",
+       "16      Pidgeotto\n",
+       "17        Pidgeot\n",
+       "18        Rattata\n",
+       "19       Raticate\n",
+       "20        Spearow\n",
+       "21         Fearow\n",
+       "22          Ekans\n",
+       "23          Arbok\n",
+       "24        Pikachu\n",
+       "25         Raichu\n",
+       "26      Sandshrew\n",
+       "27      Sandslash\n",
+       "28        Nidoran\n",
+       "29       Nidorina\n",
+       "          ...    \n",
+       "691     Clauncher\n",
+       "692     Clawitzer\n",
+       "693    Helioptile\n",
+       "694     Heliolisk\n",
+       "695        Tyrunt\n",
+       "696     Tyrantrum\n",
+       "697        Amaura\n",
+       "698       Aurorus\n",
+       "699       Sylveon\n",
+       "700      Hawlucha\n",
+       "701       Dedenne\n",
+       "702       Carbink\n",
+       "703         Goomy\n",
+       "704       Sliggoo\n",
+       "705        Goodra\n",
+       "706        Klefki\n",
+       "707      Phantump\n",
+       "708     Trevenant\n",
+       "709     Pumpkaboo\n",
+       "710     Gourgeist\n",
+       "711      Bergmite\n",
+       "712       Avalugg\n",
+       "713        Noibat\n",
+       "714       Noivern\n",
+       "715       Xerneas\n",
+       "716       Yveltal\n",
+       "717       Zygarde\n",
+       "718       Diancie\n",
+       "719         Hoopa\n",
+       "720     Volcanion\n",
+       "Name: Pokemon, Length: 721, dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pd.read_csv()"
+    "pokemon  = pd.read_csv(\"pokemon.csv\", usecols = [\"Pokemon\"], squeeze = True)   #usecols : To use only specific columns , \n",
+    "                                                                    #squeeze : To see the data as a series and not a dataframe\n",
+    "pokemon\n"
    ]
   },
   {
