--- a/Series.ipynb
+++ b/Series.ipynb
@@ -584,6 +584,8 @@
    ],
    "source": [
     "google = pd.read_csv(\"google_stock_price.csv\",squeeze = True)\n",
+    "pokemon  = pd.read_csv(\"pokemon.csv\", usecols = [\"Pokemon\"], squeeze = True)   #usecols : To use only specific columns , \n",
+    "\n",
     "google"
    ]
   },
@@ -5080,84 +5082,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "717     Zygarde\n",
+       "633    Zweilous\n",
+       "40        Zubat\n",
+       "569       Zorua\n",
+       "570     Zoroark\n",
+       "Name: Pokemon, dtype: object"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.sort_values(ascending = False).head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11    49.95\n",
+       "9     50.07\n",
+       "0     50.12\n",
+       "10    50.70\n",
+       "12    50.74\n",
+       "Name: shit, dtype: float64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "google.sort_values().head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3011    782.22\n",
+       "Name: shit, dtype: float64"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "google.sort_values(ascending = False).head(1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "782.22"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(google)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# inplace parameter  \n",
+    "inplace parameter modifies the original data and not a copy of it"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "google.sort_values(ascending = False, inplace = True)   "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3011    782.22\n",
+       "2859    776.60\n",
+       "3009    773.18\n",
+       "3007    772.88\n",
+       "3010    771.61\n",
+       "3008    771.07\n",
+       "2860    771.00\n",
+       "3006    768.79\n",
+       "2840    767.04\n",
+       "2843    766.81\n",
+       "2934    766.61\n",
+       "2882    764.65\n",
+       "2844    763.25\n",
+       "2858    762.51\n",
+       "2841    762.38\n",
+       "2845    762.37\n",
+       "2937    759.14\n",
+       "2933    759.00\n",
+       "2861    758.88\n",
+       "2851    758.09\n",
+       "2834    756.60\n",
+       "2835    755.98\n",
+       "2935    753.93\n",
+       "2932    753.20\n",
+       "2936    752.67\n",
+       "2842    752.54\n",
+       "2881    752.00\n",
+       "2931    751.72\n",
+       "2846    751.61\n",
+       "2921    750.53\n",
+       "         ...  \n",
+       "28       65.47\n",
+       "29       64.74\n",
+       "27       63.37\n",
+       "24       60.35\n",
+       "25       59.86\n",
+       "21       59.62\n",
+       "23       59.13\n",
+       "26       59.07\n",
+       "22       58.86\n",
+       "20       58.69\n",
+       "19       56.93\n",
+       "18       55.94\n",
+       "17       55.69\n",
+       "2        54.65\n",
+       "1        54.10\n",
+       "5        53.90\n",
+       "16       53.70\n",
+       "6        53.02\n",
+       "4        52.95\n",
+       "15       52.61\n",
+       "3        52.38\n",
+       "8        51.13\n",
+       "13       51.10\n",
+       "14       51.10\n",
+       "7        50.95\n",
+       "12       50.74\n",
+       "10       50.70\n",
+       "0        50.12\n",
+       "9        50.07\n",
+       "11       49.95\n",
+       "Name: shit, Length: 3012, dtype: float64"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "google"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "google = pd.read_csv(\"google_stock_price.csv\",squeeze = True)\n",
+    "pokemon  = pd.read_csv(\"pokemon.csv\", usecols = [\"Pokemon\"], squeeze = True)   #usecols : To use only specific columns , \n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Bulbasaur\n",
+       "1         Ivysaur\n",
+       "2        Venusaur\n",
+       "3      Charmander\n",
+       "4      Charmeleon\n",
+       "5       Charizard\n",
+       "6        Squirtle\n",
+       "7       Wartortle\n",
+       "8       Blastoise\n",
+       "9        Caterpie\n",
+       "10        Metapod\n",
+       "11     Butterfree\n",
+       "12         Weedle\n",
+       "13         Kakuna\n",
+       "14       Beedrill\n",
+       "15         Pidgey\n",
+       "16      Pidgeotto\n",
+       "17        Pidgeot\n",
+       "18        Rattata\n",
+       "19       Raticate\n",
+       "20        Spearow\n",
+       "21         Fearow\n",
+       "22          Ekans\n",
+       "23          Arbok\n",
+       "24        Pikachu\n",
+       "25         Raichu\n",
+       "26      Sandshrew\n",
+       "27      Sandslash\n",
+       "28        Nidoran\n",
+       "29       Nidorina\n",
+       "          ...    \n",
+       "691     Clauncher\n",
+       "692     Clawitzer\n",
+       "693    Helioptile\n",
+       "694     Heliolisk\n",
+       "695        Tyrunt\n",
+       "696     Tyrantrum\n",
+       "697        Amaura\n",
+       "698       Aurorus\n",
+       "699       Sylveon\n",
+       "700      Hawlucha\n",
+       "701       Dedenne\n",
+       "702       Carbink\n",
+       "703         Goomy\n",
+       "704       Sliggoo\n",
+       "705        Goodra\n",
+       "706        Klefki\n",
+       "707      Phantump\n",
+       "708     Trevenant\n",
+       "709     Pumpkaboo\n",
+       "710     Gourgeist\n",
+       "711      Bergmite\n",
+       "712       Avalugg\n",
+       "713        Noibat\n",
+       "714       Noivern\n",
+       "715       Xerneas\n",
+       "716       Yveltal\n",
+       "717       Zygarde\n",
+       "718       Diancie\n",
+       "719         Hoopa\n",
+       "720     Volcanion\n",
+       "Name: Pokemon, Length: 721, dtype: object"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.sort_index(ascending = True)\n"
+   ]
   },
   {
    "cell_type": "code",
