--- a/Series.ipynb
+++ b/Series.ipynb
@@ -5380,6 +5380,728 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "google = pd.read_csv(\"google_stock_price.csv\",squeeze = True)\n",
+    "pokemon  = pd.read_csv(\"pokemon.csv\", usecols = [\"Pokemon\"], squeeze = True)   #usecols : To use only specific columns , \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# in keyword"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Bulbasaur\n",
+       "1      Ivysaur\n",
+       "2     Venusaur\n",
+       "Name: Pokemon, dtype: object"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Bulbasaur' in pokemon  #gives false as in keyword looks at the index of the series "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Bulbasaur' in pokemon.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Extract by index position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Oshawott'"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon[500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3    Charmander\n",
+       "6      Squirtle\n",
+       "8     Blastoise\n",
+       "Name: Pokemon, dtype: object"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon[[3,6,8]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50       Dugtrio\n",
+       "51        Meowth\n",
+       "52       Persian\n",
+       "53       Psyduck\n",
+       "54       Golduck\n",
+       "55        Mankey\n",
+       "56      Primeape\n",
+       "57     Growlithe\n",
+       "58      Arcanine\n",
+       "59       Poliwag\n",
+       "60     Poliwhirl\n",
+       "61     Poliwrath\n",
+       "62          Abra\n",
+       "63       Kadabra\n",
+       "64      Alakazam\n",
+       "65        Machop\n",
+       "66       Machoke\n",
+       "67       Machamp\n",
+       "68    Bellsprout\n",
+       "69    Weepinbell\n",
+       "70    Victreebel\n",
+       "71     Tentacool\n",
+       "72    Tentacruel\n",
+       "73       Geodude\n",
+       "74      Graveler\n",
+       "75         Golem\n",
+       "76        Ponyta\n",
+       "77      Rapidash\n",
+       "78      Slowpoke\n",
+       "79       Slowbro\n",
+       "80     Magnemite\n",
+       "81      Magneton\n",
+       "82    Farfetch'd\n",
+       "83         Doduo\n",
+       "84        Dodrio\n",
+       "85          Seel\n",
+       "86       Dewgong\n",
+       "87        Grimer\n",
+       "88           Muk\n",
+       "89      Shellder\n",
+       "90      Cloyster\n",
+       "91        Gastly\n",
+       "92       Haunter\n",
+       "93        Gengar\n",
+       "94          Onix\n",
+       "95       Drowzee\n",
+       "96         Hypno\n",
+       "97        Krabby\n",
+       "98       Kingler\n",
+       "99       Voltorb\n",
+       "Name: Pokemon, dtype: object"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon[50:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400      Kricketot\n",
+       "401     Kricketune\n",
+       "402          Shinx\n",
+       "403          Luxio\n",
+       "404         Luxray\n",
+       "405          Budew\n",
+       "406       Roserade\n",
+       "407       Cranidos\n",
+       "408      Rampardos\n",
+       "409       Shieldon\n",
+       "410      Bastiodon\n",
+       "411          Burmy\n",
+       "412       Wormadam\n",
+       "413         Mothim\n",
+       "414         Combee\n",
+       "415      Vespiquen\n",
+       "416      Pachirisu\n",
+       "417         Buizel\n",
+       "418       Floatzel\n",
+       "419        Cherubi\n",
+       "420        Cherrim\n",
+       "421        Shellos\n",
+       "422      Gastrodon\n",
+       "423        Ambipom\n",
+       "424       Drifloon\n",
+       "425       Drifblim\n",
+       "426        Buneary\n",
+       "427        Lopunny\n",
+       "428      Mismagius\n",
+       "429      Honchkrow\n",
+       "          ...     \n",
+       "661    Fletchinder\n",
+       "662     Talonflame\n",
+       "663     Scatterbug\n",
+       "664         Spewpa\n",
+       "665       Vivillon\n",
+       "666         Litleo\n",
+       "667         Pyroar\n",
+       "668        Flabébé\n",
+       "669        Floette\n",
+       "670        Florges\n",
+       "671         Skiddo\n",
+       "672         Gogoat\n",
+       "673        Pancham\n",
+       "674        Pangoro\n",
+       "675        Furfrou\n",
+       "676         Espurr\n",
+       "677       Meowstic\n",
+       "678        Honedge\n",
+       "679       Doublade\n",
+       "680      Aegislash\n",
+       "681       Spritzee\n",
+       "682     Aromatisse\n",
+       "683        Swirlix\n",
+       "684       Slurpuff\n",
+       "685          Inkay\n",
+       "686        Malamar\n",
+       "687        Binacle\n",
+       "688     Barbaracle\n",
+       "689         Skrelp\n",
+       "690       Dragalge\n",
+       "Name: Pokemon, Length: 291, dtype: object"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon[400:-30]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Extract by index labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pokemon\n",
+       "Bulbasaur        Grass\n",
+       "Ivysaur          Grass\n",
+       "Venusaur         Grass\n",
+       "Charmander        Fire\n",
+       "Charmeleon        Fire\n",
+       "Charizard         Fire\n",
+       "Squirtle         Water\n",
+       "Wartortle        Water\n",
+       "Blastoise        Water\n",
+       "Caterpie           Bug\n",
+       "Metapod            Bug\n",
+       "Butterfree         Bug\n",
+       "Weedle             Bug\n",
+       "Kakuna             Bug\n",
+       "Beedrill           Bug\n",
+       "Pidgey          Normal\n",
+       "Pidgeotto       Normal\n",
+       "Pidgeot         Normal\n",
+       "Rattata         Normal\n",
+       "Raticate        Normal\n",
+       "Spearow         Normal\n",
+       "Fearow          Normal\n",
+       "Ekans           Poison\n",
+       "Arbok           Poison\n",
+       "Pikachu       Electric\n",
+       "Raichu        Electric\n",
+       "Sandshrew       Ground\n",
+       "Sandslash       Ground\n",
+       "Nidoran         Poison\n",
+       "Nidorina        Poison\n",
+       "                ...   \n",
+       "Clauncher        Water\n",
+       "Clawitzer        Water\n",
+       "Helioptile    Electric\n",
+       "Heliolisk     Electric\n",
+       "Tyrunt            Rock\n",
+       "Tyrantrum         Rock\n",
+       "Amaura            Rock\n",
+       "Aurorus           Rock\n",
+       "Sylveon          Fairy\n",
+       "Hawlucha      Fighting\n",
+       "Dedenne       Electric\n",
+       "Carbink           Rock\n",
+       "Goomy           Dragon\n",
+       "Sliggoo         Dragon\n",
+       "Goodra          Dragon\n",
+       "Klefki           Steel\n",
+       "Phantump         Ghost\n",
+       "Trevenant        Ghost\n",
+       "Pumpkaboo        Ghost\n",
+       "Gourgeist        Ghost\n",
+       "Bergmite           Ice\n",
+       "Avalugg            Ice\n",
+       "Noibat          Flying\n",
+       "Noivern         Flying\n",
+       "Xerneas          Fairy\n",
+       "Yveltal           Dark\n",
+       "Zygarde         Dragon\n",
+       "Diancie           Rock\n",
+       "Hoopa          Psychic\n",
+       "Volcanion         Fire\n",
+       "Name: Type, Length: 721, dtype: object"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon  = pd.read_csv(\"pokemon.csv\",index_col=\"Pokemon\",squeeze=True)   #usecols : To use only specific columns , \n",
+    "pokemon\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pokemon\n",
+       "Electrode    Electric\n",
+       "Kricketot         Bug\n",
+       "Name: Type, dtype: object"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon[[100,400]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pokemon\n",
+       "Bulbasaur    Grass\n",
+       "Name: Type, dtype: object"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon[[\"Bulbasaur\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\series.py:851: FutureWarning: \n",
+      "Passing list-likes to .loc or [] with any missing label will raise\n",
+      "KeyError in the future, you can use .reindex() as an alternative.\n",
+      "\n",
+      "See the documentation here:\n",
+      "https://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate-loc-reindex-listlike\n",
+      "  return self.loc[key]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pokemon\n",
+       "Bulbasaur    Grass\n",
+       "Digimon        NaN\n",
+       "Name: Type, dtype: object"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon[[\"Bulbasaur\",\"Digimon\"]]    #Digimon is not present in the data so it is NaN ie. missing, blank, etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pokemon\n",
+       "Bulbasaur        Grass\n",
+       "Ivysaur          Grass\n",
+       "Venusaur         Grass\n",
+       "Charmander        Fire\n",
+       "Charmeleon        Fire\n",
+       "Charizard         Fire\n",
+       "Squirtle         Water\n",
+       "Wartortle        Water\n",
+       "Blastoise        Water\n",
+       "Caterpie           Bug\n",
+       "Metapod            Bug\n",
+       "Butterfree         Bug\n",
+       "Weedle             Bug\n",
+       "Kakuna             Bug\n",
+       "Beedrill           Bug\n",
+       "Pidgey          Normal\n",
+       "Pidgeotto       Normal\n",
+       "Pidgeot         Normal\n",
+       "Rattata         Normal\n",
+       "Raticate        Normal\n",
+       "Spearow         Normal\n",
+       "Fearow          Normal\n",
+       "Ekans           Poison\n",
+       "Arbok           Poison\n",
+       "Pikachu       Electric\n",
+       "Name: Type, dtype: object"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon[\"Bulbasaur\":\"Pikachu\"]      #this time pickachu is included"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# .get() method on a series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pokemon\n",
+       "Abomasnow      Grass\n",
+       "Abra         Psychic\n",
+       "Absol           Dark\n",
+       "Name: Type, dtype: object"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.sort_index(inplace=True)\n",
+    "pokemon.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pokemon\n",
+       "Charizard      Fire\n",
+       "Meowth       Normal\n",
+       "Name: Type, dtype: object"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.get(\"Charizard\")\n",
+    "pokemon.get(key = \"Charizard\")\n",
+    "pokemon.get(key = [\"Charizard\", \"Meowth\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Not a Pokemon'"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.get(\"Digimon\")   #returns none as digimon is not present\n",
+    "pokemon.get(\"Digimon\", default= \"Not a Pokemon\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
