--- a/DataFrames 1.ipynb
+++ b/DataFrames 1.ipynb
@@ -631,8 +631,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# difference between shared methods\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rev = pd.read_csv(\"revenue.csv\", index_col = \"Date\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -640,60 +660,80 @@
     {
      "data": {
       "text/plain": [
-       "458"
+       "New York       5475\n",
+       "Los Angeles    5134\n",
+       "Miami          5641\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "rev.sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "New York       5475\n",
+       "Los Angeles    5134\n",
+       "Miami          5641\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rev.sum(axis = 0)    #columnwise sum\n",
+    "rev.sum(axis = \"index\")  "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "1/1/16     1606\n",
+       "1/2/16     2060\n",
+       "1/3/16      967\n",
+       "1/4/16     2519\n",
+       "1/5/16      438\n",
+       "1/6/16     1935\n",
+       "1/7/16     1234\n",
+       "1/8/16     2313\n",
+       "1/9/16     2623\n",
+       "1/10/16     555\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rev.sum(axis = 1) #rowwise sum\n",
+    "rev.sum(axis = \"columns\")"
+   ]
   },
   {
    "cell_type": "code",
