--- a/DataFrames 1.ipynb
+++ b/DataFrames 1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -733,6 +733,203 @@
    "source": [
     "rev.sum(axis = 1) #rowwise sum\n",
     "rev.sum(axis = \"columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nba = pd.read_csv(\"nba.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# extract single column (not best method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                Avery Bradley\n",
+       "1                  Jae Crowder\n",
+       "2                 John Holland\n",
+       "3                  R.J. Hunter\n",
+       "4                Jonas Jerebko\n",
+       "5                 Amir Johnson\n",
+       "6                Jordan Mickey\n",
+       "7                 Kelly Olynyk\n",
+       "8                 Terry Rozier\n",
+       "9                 Marcus Smart\n",
+       "10             Jared Sullinger\n",
+       "11               Isaiah Thomas\n",
+       "12                 Evan Turner\n",
+       "13                 James Young\n",
+       "14                Tyler Zeller\n",
+       "15            Bojan Bogdanovic\n",
+       "16                Markel Brown\n",
+       "17             Wayne Ellington\n",
+       "18     Rondae Hollis-Jefferson\n",
+       "19                Jarrett Jack\n",
+       "20              Sergey Karasev\n",
+       "21             Sean Kilpatrick\n",
+       "22                Shane Larkin\n",
+       "23                 Brook Lopez\n",
+       "24            Chris McCullough\n",
+       "25                 Willie Reed\n",
+       "26             Thomas Robinson\n",
+       "27                  Henry Sims\n",
+       "28                Donald Sloan\n",
+       "29              Thaddeus Young\n",
+       "                ...           \n",
+       "428            Al-Farouq Aminu\n",
+       "429            Pat Connaughton\n",
+       "430               Allen Crabbe\n",
+       "431                   Ed Davis\n",
+       "432           Maurice Harkless\n",
+       "433           Gerald Henderson\n",
+       "434                Chris Kaman\n",
+       "435             Meyers Leonard\n",
+       "436             Damian Lillard\n",
+       "437              C.J. McCollum\n",
+       "438               Luis Montero\n",
+       "439              Mason Plumlee\n",
+       "440              Brian Roberts\n",
+       "441                Noah Vonleh\n",
+       "442              Trevor Booker\n",
+       "443                 Trey Burke\n",
+       "444                 Alec Burks\n",
+       "445                 Dante Exum\n",
+       "446             Derrick Favors\n",
+       "447                Rudy Gobert\n",
+       "448             Gordon Hayward\n",
+       "449                Rodney Hood\n",
+       "450                 Joe Ingles\n",
+       "451              Chris Johnson\n",
+       "452                 Trey Lyles\n",
+       "453               Shelvin Mack\n",
+       "454                  Raul Neto\n",
+       "455               Tibor Pleiss\n",
+       "456                Jeff Withey\n",
+       "457                        NaN\n",
+       "Name: Name, Length: 458, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba.Name                               #works only for single word collumn names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nba.Number\n",
+    "Output = None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       7730337.0\n",
+       "1       6796117.0\n",
+       "2             NaN\n",
+       "3       1148640.0\n",
+       "4       5000000.0\n",
+       "5      12000000.0\n",
+       "6       1170960.0\n",
+       "7       2165160.0\n",
+       "8       1824360.0\n",
+       "9       3431040.0\n",
+       "10      2569260.0\n",
+       "11      6912869.0\n",
+       "12      3425510.0\n",
+       "13      1749840.0\n",
+       "14      2616975.0\n",
+       "15      3425510.0\n",
+       "16       845059.0\n",
+       "17      1500000.0\n",
+       "18      1335480.0\n",
+       "19      6300000.0\n",
+       "20      1599840.0\n",
+       "21       134215.0\n",
+       "22      1500000.0\n",
+       "23     19689000.0\n",
+       "24      1140240.0\n",
+       "25       947276.0\n",
+       "26       981348.0\n",
+       "27       947276.0\n",
+       "28       947276.0\n",
+       "29     11235955.0\n",
+       "          ...    \n",
+       "428     8042895.0\n",
+       "429      625093.0\n",
+       "430      947276.0\n",
+       "431     6980802.0\n",
+       "432     2894059.0\n",
+       "433     6000000.0\n",
+       "434     5016000.0\n",
+       "435     3075880.0\n",
+       "436     4236287.0\n",
+       "437     2525160.0\n",
+       "438      525093.0\n",
+       "439     1415520.0\n",
+       "440     2854940.0\n",
+       "441     2637720.0\n",
+       "442     4775000.0\n",
+       "443     2658240.0\n",
+       "444     9463484.0\n",
+       "445     3777720.0\n",
+       "446    12000000.0\n",
+       "447     1175880.0\n",
+       "448    15409570.0\n",
+       "449     1348440.0\n",
+       "450     2050000.0\n",
+       "451      981348.0\n",
+       "452     2239800.0\n",
+       "453     2433333.0\n",
+       "454      900000.0\n",
+       "455     2900000.0\n",
+       "456      947276.0\n",
+       "457           NaN\n",
+       "Name: Salary, Length: 458, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba[\"Name\"]  #better way \n",
+    "nba[\"Salary\"]"
    ]
   },
   {
