--- a/DataFrames 1.ipynb
+++ b/DataFrames 1.ipynb
@@ -850,114 +850,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       7730337.0\n",
-       "1       6796117.0\n",
-       "2             NaN\n",
-       "3       1148640.0\n",
-       "4       5000000.0\n",
-       "5      12000000.0\n",
-       "6       1170960.0\n",
-       "7       2165160.0\n",
-       "8       1824360.0\n",
-       "9       3431040.0\n",
-       "10      2569260.0\n",
-       "11      6912869.0\n",
-       "12      3425510.0\n",
-       "13      1749840.0\n",
-       "14      2616975.0\n",
-       "15      3425510.0\n",
-       "16       845059.0\n",
-       "17      1500000.0\n",
-       "18      1335480.0\n",
-       "19      6300000.0\n",
-       "20      1599840.0\n",
-       "21       134215.0\n",
-       "22      1500000.0\n",
-       "23     19689000.0\n",
-       "24      1140240.0\n",
-       "25       947276.0\n",
-       "26       981348.0\n",
-       "27       947276.0\n",
-       "28       947276.0\n",
-       "29     11235955.0\n",
-       "          ...    \n",
-       "428     8042895.0\n",
-       "429      625093.0\n",
-       "430      947276.0\n",
-       "431     6980802.0\n",
-       "432     2894059.0\n",
-       "433     6000000.0\n",
-       "434     5016000.0\n",
-       "435     3075880.0\n",
-       "436     4236287.0\n",
-       "437     2525160.0\n",
-       "438      525093.0\n",
-       "439     1415520.0\n",
-       "440     2854940.0\n",
-       "441     2637720.0\n",
-       "442     4775000.0\n",
-       "443     2658240.0\n",
-       "444     9463484.0\n",
-       "445     3777720.0\n",
-       "446    12000000.0\n",
-       "447     1175880.0\n",
-       "448    15409570.0\n",
-       "449     1348440.0\n",
-       "450     2050000.0\n",
-       "451      981348.0\n",
-       "452     2239800.0\n",
-       "453     2433333.0\n",
-       "454      900000.0\n",
-       "455     2900000.0\n",
-       "456      947276.0\n",
-       "457           NaN\n",
-       "Name: Salary, Length: 458, dtype: float64"
+       "0    Avery Bradley\n",
+       "1      Jae Crowder\n",
+       "2     John Holland\n",
+       "3      R.J. Hunter\n",
+       "4    Jonas Jerebko\n",
+       "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nba[\"Name\"]  #better way \n",
-    "nba[\"Salary\"]"
+    "nba[\"Salary\"]\n",
+    "nba[\"Name\"].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# extract two or more columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Avery Bradley</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jae Crowder</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>John Holland</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Name            Team\n",
+       "0  Avery Bradley  Boston Celtics\n",
+       "1    Jae Crowder  Boston Celtics\n",
+       "2   John Holland  Boston Celtics"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba[[\"Name\",\"Team\"]].head(3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number</th>\n",
+       "      <th>College</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Texas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>99.0</td>\n",
+       "      <td>Marquette</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Boston University</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Georgia State</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>LSU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>Gonzaga</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Louisville</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>Oklahoma State</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Number            College\n",
+       "0     0.0              Texas\n",
+       "1    99.0          Marquette\n",
+       "2    30.0  Boston University\n",
+       "3    28.0      Georgia State\n",
+       "4     8.0                NaN\n",
+       "5    90.0                NaN\n",
+       "6    55.0                LSU\n",
+       "7    41.0            Gonzaga\n",
+       "8    12.0         Louisville\n",
+       "9    36.0     Oklahoma State"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba[[\"Number\",\"College\"]].head(10)"
+   ]
   },
   {
    "cell_type": "code",
